--- a/views/add_user.ejs
+++ b/views/add_user.ejs
@@ -20,7 +20,7 @@
         <main>
             <div>
                 <div>
-                    <a href="/">All Users</a>
+                    <input type="button" onclick="location.href='/'" value=" < All Users"/></td>
                 </div>
             </div>
             <div>
@@ -37,10 +37,6 @@
                     <div>
                         <label>Quantity</label>
                         <input type="text" name="quantity" value="" placeholder="23" required>
-                    </div>
-                    <div>
-                        <label>Image</label>
-                        <input type="file" name="image" value="" placeholder="23">
                     </div>
                     <div>
                         <button type="submit">Save</button>
